@@ -74,6 +74,7 @@ export("as.rwl",
        "bai.out",
        "ccf.series.rwl",
        "chron",
+       "chron.stabilized",
        "cms",
        "combine.rwl",
        "common.interval",
